Updates to Java 16