@@ -1,28 +1,14 @@
 plugins {
-    id "java"
-}
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_15
-    targetCompatibility = JavaVersion.VERSION_15
-}
-
-compileJava {
-    options.compilerArgs.add("--enable-preview")
-}
-compileTestJava {
-    options.compilerArgs.add("--enable-preview")
-}
-test {
-    jvmArgs "--enable-preview"
+    id 'java'
 }
 
 repositories {
-    jcenter()
+    mavenLocal()
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
     testImplementation 'org.assertj:assertj-core:3.15.0'
     testImplementation 'net.jqwik:jqwik:1.2.7'
 }
+
